--- a/8.0/Dockerfile
+++ b/8.0/Dockerfile
@@ -57,7 +57,12 @@ RUN sed -Ei 's/^(bind-address|log)/#&/' /etc/mysql/mysql.conf.d/mysqld.cnf \
 VOLUME /var/lib/mysql
 
 COPY docker-entrypoint.sh /usr/local/bin/
+COPY healthcheck.sh /usr/local/bin/
+
 RUN ln -s usr/local/bin/docker-entrypoint.sh /entrypoint.sh # backwards compat
+
+HEALTHCHECK CMD ["/bin/bash", "/usr/local/bin/healthcheck.sh"]
+
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 EXPOSE 3306
